feat(dashboard): Add transaction and leaderboard live data to dashboard
Handle live data stream from websocket in transaction store. Add sekeleton loader for load handling. Show transaction and leaderboard data on dashboard. Add tests.

--- a/src/app/features/dashboard/components/dashboard-page/dashboard-page.html
+++ b/src/app/features/dashboard/components/dashboard-page/dashboard-page.html
@@ -1,3 +1,9 @@
-<app-dashboard
-  [transactions]="transactions()"
-></app-dashboard>
+@if (!isLoading()) {
+  <app-dashboard
+    [transactions]="transactions()"
+    [leaderboardValues]="leaderboardValues()"
+    [planets]="planets()"
+  ></app-dashboard>
+} @else {
+  <app-dashboard-skeleton></app-dashboard-skeleton>
+}
