--- a/src/app/features/dashboard/components/dashboard/dashboard.html
+++ b/src/app/features/dashboard/components/dashboard/dashboard.html
@@ -1,44 +1,85 @@
 <div class="cards-container">
-  <mat-card appearance="raised" class="content-card">
-    <mat-card-header>
-      <mat-card-title>Card 1</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
+  <ng-container *transloco="let t">
+    <mat-card appearance="raised" class="content-card">
+      <mat-card-header>
+        <mat-card-title>{{t('dashboard.transactions')}}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
 
-      <cdk-virtual-scroll-viewport class="viewport-container" [itemSize]="48" [maxBufferPx]="1200" [minBufferPx]="400">
-        <table cdk-table [dataSource]="transactions()" [trackBy]="trackBy" recycleRows>
-          <ng-container cdkColumnDef="time">
-            <th cdk-header-cell *cdkHeaderCellDef> TODO timestamp </th>
-            <td cdk-cell *cdkCellDef="let element"> {{element.timeStamp}} </td>
-          </ng-container>
+        <cdk-virtual-scroll-viewport class="viewport-container" [itemSize]="48" [maxBufferPx]="1200"
+                                     [minBufferPx]="400">
+          <table cdk-table [dataSource]="formattedTransactions()" [trackBy]="transactionTrackBy" recycleRows>
+            <ng-container cdkColumnDef="time">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.timeStamp')}}</th>
+              <td cdk-cell *cdkCellDef="let element"> {{ element.time }}</td>
+            </ng-container>
 
-          <ng-container cdkColumnDef="product">
-            <th cdk-header-cell *cdkHeaderCellDef> TODO product </th>
-            <td cdk-cell *cdkCellDef="let element"> {{element.product}} </td>
-          </ng-container>
+            <ng-container cdkColumnDef="product">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.product')}}</th>
+              <td cdk-cell *cdkCellDef="let element"> {{ element.product }}</td>
+            </ng-container>
 
-          <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
-          <tr cdk-row *cdkRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      </cdk-virtual-scroll-viewport>
+            <ng-container cdkColumnDef="planet">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.planet')}}</th>
+              <td cdk-cell *cdkCellDef="let element"> {{ element.planet }}</td>
+            </ng-container>
 
-    </mat-card-content>
-  </mat-card>
+            <ng-container cdkColumnDef="transactionType">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.transactionType')}}</th>
+              <td cdk-cell *cdkCellDef="let element"> {{ element.transactionType }}</td>
+            </ng-container>
 
-  <mat-card appearance="raised" class="content-card">
-    <mat-card-header>
-      <mat-card-title>Card 2</mat-card-title>
-      <mat-card-subtitle>Second card subtitle</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        This is the content of the second card. The layout uses CSS Grid
-        to ensure proper responsive behavior across all device sizes.
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button color="primary">ACTION 1</button>
-      <button mat-button>ACTION 2</button>
-    </mat-card-actions>
-  </mat-card>
+            <ng-container cdkColumnDef="pricePerUnit">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.price')}}</th>
+              <td cdk-cell *cdkCellDef="let element"> {{ element.pricePerUnit }}</td>
+            </ng-container>
+
+            <ng-container cdkColumnDef="volume">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.volume')}}</th>
+              <td cdk-cell *cdkCellDef="let element"> {{ element.volume }}</td>
+            </ng-container>
+
+            <ng-container cdkColumnDef="sum">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.total')}}</th>
+              <td cdk-cell *cdkCellDef="let element"> {{ element.sum }}</td>
+            </ng-container>
+
+            <tr cdk-header-row *cdkHeaderRowDef="transactionDisplayedColumns"></tr>
+            <tr cdk-row *cdkRowDef="let row; columns: transactionDisplayedColumns;"></tr>
+          </table>
+        </cdk-virtual-scroll-viewport>
+
+      </mat-card-content>
+    </mat-card>
+
+    <mat-card appearance="raised" class="content-card">
+      <mat-card-header>
+        <mat-card-title>{{t('dashboard.leaderboard')}}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+
+        <cdk-virtual-scroll-viewport class="viewport-container" [itemSize]="48" [maxBufferPx]="1200"
+                                     [minBufferPx]="400">
+          <table cdk-table [dataSource]="formattedLeaderboardValues()" [trackBy]="leaderboardTrackBy" recycleRows>
+            <ng-container cdkColumnDef="planet">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.planet')}}</th>
+              <td cdk-cell *cdkCellDef="let element">{{ element.planet }}</td>
+            </ng-container>
+            <ng-container cdkColumnDef="sum">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.transactionValue')}}</th>
+              <td cdk-cell *cdkCellDef="let element">{{ element.sumTransactionValue }}</td>
+            </ng-container>
+            <ng-container cdkColumnDef="transaction">
+              <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.numberOfTransaction')}}</th>
+              <td cdk-cell *cdkCellDef="let element">{{ element.numberOfTransactions }}</td>
+            </ng-container>
+
+            <tr cdk-header-row *cdkHeaderRowDef="leaderboardDisplayedColumns"></tr>
+            <tr cdk-row *cdkRowDef="let row; columns: leaderboardDisplayedColumns;"></tr>
+          </table>
+        </cdk-virtual-scroll-viewport>
+
+      </mat-card-content>
+    </mat-card>
+  </ng-container>
 </div>
