--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,23 @@ body {
   height: 100%;
 }
 /* You can add global styles to this file, and also import other style files */
+
+.mat-mdc-snack-bar-container.error-snackbar {
+  --mdc-snackbar-container-color: var(--mat-sys-error) !important;
+  margin-bottom: 1.5rem !important;
+
+  .mdc-snackbar__surface {
+    background-color: var(--mat-sys-error) !important;
+  }
+
+  .mdc-snackbar__label,
+  .mat-mdc-snack-bar-label {
+    color: var(--mat-sys-on-error) !important;
+  }
+
+  .mat-mdc-button,
+  .mat-mdc-snack-bar-action {
+    --mat-text-button-label-text-color: var(--mat-sys-on-error) !important;
+    color: var(--mat-sys-on-error) !important;
+  }
+}
