--- a/src/app/features/home/components/home/home.html
+++ b/src/app/features/home/components/home/home.html
@@ -2,6 +2,17 @@
   <ng-container *transloco="let t">
     <mat-toolbar color="primary" class="mat-elevation-z4">
       <span>{{t('app.title')}}</span>
+      <span class="menu-spacer"></span>
+      <a mat-button routerLink="/dashboard" routerLinkActive="active-link">
+        {{t('toolbar.dashboard')}}
+      </a>
+      <a
+        *appHasRole="[Role.ADMIN]"
+        mat-button
+        routerLink="/admin"
+        routerLinkActive="active-link">
+        {{t('toolbar.admin')}}
+      </a>
       <span class="spacer"></span>
       <button mat-icon-button aria-label="Logout" (click)="onLogout()">
         <mat-icon>logout</mat-icon>
