--- a/src/app/features/home/components/home/home.html
+++ b/src/app/features/home/components/home/home.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <ng-container *transloco="let t">
     <mat-toolbar color="primary" class="mat-elevation-z4">
-      <span>{{t('app.title')}}</span>
+      <span class="app-title">{{t('app.title')}}</span>
       <span class="menu-spacer"></span>
       <a mat-button routerLink="/dashboard" routerLinkActive="active-link">
         {{t('toolbar.dashboard')}}
