refactor: Optimize transaction handling
Remove the array/object recreation operations to make data handling faster. Update transactions table when there is new data in the same array

--- a/src/app/features/dashboard/components/dashboard/dashboard.html
+++ b/src/app/features/dashboard/components/dashboard/dashboard.html
@@ -8,7 +8,7 @@
 
         <cdk-virtual-scroll-viewport class="viewport-container" [itemSize]="48" [maxBufferPx]="1200"
                                      [minBufferPx]="400">
-          <table cdk-table [dataSource]="formattedTransactions()" [trackBy]="transactionTrackBy" recycleRows>
+          <table #transactionsTable cdk-table [dataSource]="transactions()" [trackBy]="transactionTrackBy" recycleRows>
             <ng-container cdkColumnDef="time">
               <th cdk-header-cell *cdkHeaderCellDef>{{t('dashboard.table.timeStamp')}}</th>
               <td cdk-cell *cdkCellDef="let element"> {{ element.time }}</td>
